# nt2-lsu

./: .gitignore  CMakeLists.txt  GSArnoldi_forward.cpp  Makefile  README  abstract.tex  bench.py  biblio.bib  configure  hpx_gmres_test.h  main.bib  main.cpp  main.tex  matrices_list.txt  matrix.h  param.h
HPX Code/: CMakeLists.txt  GSArnoldi_forward.cpp  GSArnoldi_forward.h  GSArnoldi_foward.h  bench.py  benchmark.hpp  hpx_gmres_test.cpp  hpx_gmres_test.h  main.cpp  matrix.h  param.h  spmatrix.h
HPX Component Code/Gmres Client/: CMakeLists.txt  bench.py  gmres_test.cpp  gmres_test.h  main.cpp
HPX Component Code/Gmres Component/: CMakeLists.txt  gmres_component.cpp  gmres_component.hpp  matrix.h
Images/: image1.odg
Petsc Code/: CMakeLists.txt  benchmark.hpp  main.cpp  mmtopetsc.c  petsc_gmres_test.h
core/: CMakeLists.txt
core/cmake/: CMakeLists.txt  nt2.hpx.core.dependencies.cmake
core/include/nt2/core/details/: components.hpp  servers.hpp  servers_fwd.hpp  servers_impl.hpp  stubs.hpp
core/include/nt2/core/functions/hpx/: transform.hpp
core/src/: CMakeLists.txt  nt2_hpx_components.cpp
core/unit/: CMakeLists.txt  serialization.cpp  test_main.cpp
examples/: CMakeLists.txt
examples/sigmadelta/dataflow/: compil.sh  images.h  matrix.h  sigmadelta.cpp  sigmadelta.h  sigmadelta_test.h
examples/sigmadelta/frames/: frame.004.pgm  frame.005.pgm  frame.006.pgm  frame.009.pgm  frame.012.pgm  frame.013.pgm  frame.014.pgm  frame.015.pgm  frame.017.pgm  frame.018.pgm  frame.020.pgm  frame.022.pgm  frame.023.pgm  frame.024.pgm  frame.026.pgm  frame.027.pgm  frame.028.pgm  frame.029.pgm  frame.032.pgm  frame.035.pgm  frame.040.pgm  frame.041.pgm  frame.042.pgm  frame.043.pgm  frame.044.pgm  frame.046.pgm  frame.047.pgm  frame.049.pgm  frame.051.pgm  frame.052.pgm  frame.053.pgm  frame.056.pgm  frame.058.pgm  frame.059.pgm  frame.060.pgm  frame.062.pgm  frame.065.pgm  frame.068.pgm  frame.069.pgm  frame.071.pgm  (+54 more)
examples/sigmadelta/futures/: compil.sh  images.h  sigmadelta.cpp  sigmadelta.h  sigmadelta_test.h
scripts/: run.py
sdk/: CMakeLists.txt
sdk/cmake/: nt2.hpx.cmake  nt2.hpx.sdk.dependencies.cmake
sdk/examples/: CMakeLists.txt
sdk/examples/jacobi/: CMakeLists.txt  jacobi.cpp
sdk/examples/sigmadelta/: CMakeLists.txt
sdk/examples/sigmadelta/dataflow/: CMakeLists.txt  images.hpp  matrix.hpp  param.hpp  pgm.hpp  sigmadelta.cpp  sigmadelta.hpp  sigmadelta_test.hpp
sdk/examples/sigmadelta/frames/: frame.000.pgm  frame.002.pgm  frame.003.pgm  frame.007.pgm  frame.008.pgm  frame.010.pgm  frame.011.pgm  frame.016.pgm  frame.019.pgm  frame.021.pgm  frame.025.pgm  frame.030.pgm  frame.031.pgm  frame.033.pgm  frame.034.pgm  frame.036.pgm  frame.037.pgm  frame.038.pgm  frame.039.pgm  frame.045.pgm  frame.048.pgm  frame.050.pgm  frame.054.pgm  frame.055.pgm  frame.057.pgm  frame.061.pgm  frame.063.pgm  frame.064.pgm  frame.066.pgm  frame.067.pgm  frame.070.pgm  frame.072.pgm  frame.073.pgm  frame.075.pgm  frame.076.pgm  frame.078.pgm  frame.079.pgm  frame.080.pgm  frame.082.pgm  frame.088.pgm  (+46 more)
sdk/examples/sigmadelta/futures/: CMakeLists.txt  images.hpp  matrix.hpp  pgm.hpp  sigmadelta.cpp  sigmadelta.hpp  sigmadelta_test.hpp
sdk/include/nt2/sdk/hpx/: hpx.hpp  user_main_fwd.hpp
sdk/include/nt2/sdk/hpx/details/: command_line.hpp  granularity.hpp
sdk/src/: CMakeLists.txt  command_line.cpp  nt2_cmdline_components.cpp  nt2_hpx.cpp
src/: CMakeLists.txt  kernels.c  kernels.h  lu_dataflow.cpp  lu_hpx.cpp  lu_mkl.cpp  lu_ompss.cpp  lu_plasma.cpp  lu_tbb.cpp  matrix.hpp  timer.hpp
